# RPG-Make

./: .bumpversion.cfg  .coverage  .gitignore  CONTRIBUTING.MD  DOCUMENTATION_ORGANIZATION_COMPLETE.md  DUAL_WIELD_SYSTEM_DOCUMENTATION.md  EXPANDED_STATS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Item_functions.py  NEW_ENGINE_README.md  Playground.py  README.md  Testing.py  UI_SERVICE_MIGRATION_SUMMARY.md  __init__.py  amulet_list.py  armor_list.py  boots_list.py  character_classes.py  character_creation.py  class_creation.py  cleanup.py  combat_functions.py  combat_settings.py  config.json  debug_output.txt  debug_ring_detailed.py  debug_ring_equip.py  demo.py  demo_v3.py  dev-requirements.txt  engine_demo.py  experience_functions.py  fix_flake8.py  gen.py  inventory.py  inventory_functions.py  items_list.py  logs.py  main.py  (+26 more)
.claude/: CLAUDE.md  activecontext.md  cross_reference.md  plan.md  progress.md  settings.local.json
.gemini/: GEMINI.md  activecontext.md
.github/: ADMIN_SYSTEM_DOCUMENTATION.md  AI_AGENT_DEVELOPMENT_GUIDE.md  CONTRIBUTING.md  COPILOT.md  CURRENT_STATUS.md  GITHUB_UPDATE_COMPLETE.md  README.md  ROADMAP.md  RPG_ENGINE_REDESIGN_GUIDE.md  SECURITY.md  activecontext.md  activecontext_old.md  cross_reference.md  plan.md  plan_updated.md  progress.md  pull_request_template.md  settings.json
core/: actor.py  character_creation.py  combat_functions.py  encounter.py  experience_functions.py  inventory_functions.py  save_load.py  stats.py
docs/: AI_ARCHITECTURE.md  AI_IMPLEMENTATION_COMPLETE.md  AI_INTEGRATION_EXAMPLE.py  CHARACTER_LIBRARY_GUIDE.md  (+14 more)
(+435 files in other folders)
