[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game_sys"
version = "0.1.0"
description = "A modular Python RPG engine."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "aiofiles>=24.1.0",
  "jsonschema>=4.17.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "pytest-cov",
  "flake8",
  "mypy",
  "bump2version>=1.0.1"
]
